[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dtsec-explorer"
version = "0.1.0"
description = "Interactive Digital Twin Security Learning Platform (Streamlit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.37",
  "pandas>=2.0",
  "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dtsec_explorer*"]
